--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "torchvision (==0.16.1)",
     "torchaudio (==2.1.1)",
     "timm (>=1.0.15,<2.0.0)",
-    "numpy (<2)"
+    "numpy (<2)",
+    "matplotlib (>=3.10.1,<4.0.0)",
+    "tensorboard (>=2.19.0,<3.0.0)",
+    "mlflow (>=2.21.3,<3.0.0)"
 ]
 
 
